# classcad-python-examples

./: .gitignore  README.md
app/: pyproject.toml  requirements-dev.txt  requirements.txt
app/src/app/: app.py
app/src/app/models/: assemblyexamples.py  partexamples.py  resourcehelper.py
app/src/app/resources/: TrainStationClock.ofb
app/src/app/resources/Test/: Model2.ofb  Model3.ofb
classcadpyvista/: pyproject.toml  requirements.txt
classcadpyvista/src/classcadpyvista/: __init__.py  classcadpyvistaconverter.py
console/: pyproject.toml  requirements-dev.txt  requirements.txt
console/src/console/: __main__.py  console.py
examples/: pyproject.toml  requirements.txt
examples/src/examples/: examplesapp.py  testexamples.py
examples/src/examples/models/: examplemodels.py  solidexamples.py
examples/src/examples/resources/: examplePolylines.json
