[project]
name = "classcad-api-py-examples-app"
version = "0.0.1"
authors = [{ name = "AWV Informatik AG" }]
description="ClassCAD Examples UI App"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["awv", "classcad", "cad"]
dependencies = [
    "classcad-api-py",
    "classcad-api-py-connector",
    "classcad-api-py-pyvista",
    "pyvistaqt",
    "PyQt5"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
app = ["resources/**/*"]

[tool.black]
line-length = 120
